// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:config/loadBuildConfig > cosmiconfig > should load config from .cjs file 1`] = `
{
  "cwd": "__fixtures__/find-uniq",
  "ext": ".cjs",
  "format": "cjs",
  "pattern": "find-uniq.cts",
  "source": ".",
  "sourcemap": true,
  "sourcesContent": false,
}
`;

exports[`integration:config/loadBuildConfig > cosmiconfig > should load config from .cts file 1`] = `
{
  "bundle": true,
  "cwd": "__fixtures__/pkg/my-atoi",
  "ext": ".js",
  "format": "cjs",
  "name": "index",
  "platform": "neutral",
  "source": "find-uniq.cts",
  "sourcemap": true,
  "sourcesContent": false,
  "tsconfig": "tsconfig.json",
}
`;

exports[`integration:config/loadBuildConfig > cosmiconfig > should load config from .js file 1`] = `
{
  "bundle": true,
  "cwd": "__fixtures__/pkg/buddy",
  "entries": [
    {
      "format": "esm",
    },
    {
      "format": "cjs",
    },
  ],
  "name": "index",
  "platform": "neutral",
  "source": "buddy.js",
  "sourcemap": true,
  "sourcesContent": false,
}
`;

exports[`integration:config/loadBuildConfig > cosmiconfig > should load config from .json file 1`] = `
{
  "cwd": "__fixtures__/pkg/tribonacci",
  "entries": [
    {
      "format": "esm",
    },
    {
      "format": "cjs",
    },
  ],
  "sourcemap": true,
  "sourcesContent": false,
  "tsconfig": "tsconfig.json",
}
`;

exports[`integration:config/loadBuildConfig > cosmiconfig > should load config from .mjs file 1`] = `
{
  "cwd": "__fixtures__/pkg/sum-of-intervals",
  "entries": [
    {
      "format": "esm",
      "pattern": "sum-of-intervals.mjs",
    },
    {
      "format": "cjs",
      "pattern": "sum-of-intervals.cjs",
    },
  ],
  "source": ".",
  "sourcemap": true,
  "sourcesContent": false,
}
`;

exports[`integration:config/loadBuildConfig > cosmiconfig > should load config from .mts file 1`] = `
{
  "conditions": Set {
    "node",
    "import",
  },
  "cwd": "__fixtures__/pkg/reverse",
  "sourcemap": true,
  "sourcesContent": false,
  "tsconfig": "tsconfig.json",
}
`;

exports[`integration:config/loadBuildConfig > cosmiconfig > should load config from .ts file 1`] = `
{
  "cwd": "__fixtures__/pkg/dbl-linear",
  "format": "esm",
  "outdir": ".",
  "pattern": "dbl-linear.ts",
  "source": ".",
  "sourcemap": true,
  "sourcesContent": false,
  "tsconfig": "tsconfig.json",
}
`;
